Fix compilation of 'threadtest3' for some older versions of MSVC.

--- a/Makefile.msc
+++ b/Makefile.msc
@@ -2586,16 +2586,16 @@ rbu.exe:	$(TOP)\ext\rbu\rbu.c $(TOP)\ext\rbu\sqlite3rbu.c $(SQLITE3C) $(SQLITE3H
 	$(LTLINK) $(NO_WARN) -DSQLITE_ENABLE_RBU \
 		$(TOP)\ext\rbu\rbu.c $(SQLITE3C) /link $(LDFLAGS) $(LTLINKOPTS)
 
+THREADTEST3_SRC = \
+  $(TOP)\test\threadtest3.c \
+  $(TOP)\test\tt3_checkpoint.c \
+  $(TOP)\test\tt3_index.c \
+  $(TOP)\test\tt3_vacuum.c \
+  $(TOP)\test\tt3_stress.c \
+  $(TOP)\test\tt3_lookaside1.c
 
-THREADTEST3_SRC = $(TOP)\test\threadtest3.c    \
-                  $(TOP)\test\tt3_checkpoint.c \
-                  $(TOP)\test\tt3_index.c      \
-                  $(TOP)\test\tt3_vacuum.c      \
-                  $(TOP)\test\tt3_stress.c      \
-                  $(TOP)\test\tt3_lookaside1.c
-
-threadtest3.exe: sqlite3.obj $(THREADTEST3_SRC) $(TOP)/src/test_multiplex.c
-	$(LTLINK) $(TOP)\test\threadtest3.c $(TOP)\src\test_multiplex.c $(SQLITE3C) /link $(LDFLAGS) $(LTLINKOPTS)
+threadtest3.exe: $(THREADTEST3_SRC) $(TOP)\src\test_multiplex.c $(SQLITE3C) $(SQLITE3H)
+	$(LTLINK) $(NO_WARN) $(TOP)\test\threadtest3.c $(TOP)\src\test_multiplex.c $(SQLITE3C) /link $(LDFLAGS) $(LTLINKOPTS)
 
 LSMDIR=$(TOP)\ext\lsm1
 !INCLUDE $(LSMDIR)\Makefile.msc
@@ -2634,7 +2634,7 @@ clean:
 	del /Q sqlite-*-output.vsix 2>NUL
 	del /Q fuzzershell.exe fuzzcheck.exe sqldiff.exe dbhash.exe 2>NUL
 	del /Q sqltclsh.* 2>NUL
-	del /Q dbfuzz.exe sessionfuzz.exe 2>NUL
+	del /Q dbfuzz.exe sessionfuzz.exe threadtest3.exe 2>NUL
 	del /Q kvtest.exe ossshell.exe scrub.exe 2>NUL
 	del /Q showshm.exe sqlite3_checker.* sqlite3_expert.exe 2>NUL
 	del /Q fts5.* fts5parse.* 2>NUL
